# unshield

./: .appveyor.yml  .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  configure  configure.ac  configure.project  rebuild.sh  run-tests.sh
.github/: cirrus-ci.sh
lib/: CMakeLists.txt  Makefile  Makefile.am  file.c  internal.h  libunshield.h  unshield_config.h.in  w_endian.h  w_fnmatch.h  w_md5.h
lib/convert_utf/: readme.txt
lib/miniz/: CMakeLists.txt
lib/zlib/: CMakeLists.txt  deflate.h  inflate.h  zconf.h  zlib.h  zlib2unshield.sh  zlibcut.sh  zutil.c
src/: CMakeLists.txt  Makefile  unshield.c
test/: functions.sh  rvalgrind.sh
test/v0/: avigomanager.sh  baldurs_gate_patch_v1_1_4315_international.sh  the-feeble-files-spanish.sh  wireplay.sh
test/v5-CVE-2015-1386/: CVE-2015-1386.sh
test/v5/CVE-2015-1386/: CVE-2015-1386.sh
win32_msvc/: fnmatch.h
